--- a/package.json
+++ b/package.json
@@ -130,6 +130,8 @@
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
     "cypress": "^13.1.0",
+    "esbuild": "^0.24.0",
+    "esbuild-loader": "^4.2.2",
     "eslint-config-next": "^14.1.0",
     "eslint-plugin-autofix": "^2.1.0",
     "eslint-plugin-unused-imports": "^4.1.3",
@@ -138,6 +140,7 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "prisma": "^5.7.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.3.3"
   }
 }
